--- a/FabulousUtility.uplugin
+++ b/FabulousUtility.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "Fabulous Utility",
 	"Description": "A collection of useful functions, nodes, and other things that can come in handy in Unreal Engine projects of any type.",
-	"Category": "Other",
+	"Category": "Utilities",
 	"CreatedBy": "Sixze",
 	"CreatedByURL": "https://github.com/Sixze",
 	"DocsURL": "https://github.com/Sixze/FabulousUtility",
